tenants/redhat-consultants/llama-stack/overlays/llama-stack-0.3.0/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: policy-allow-traffic-to-llama-stack-from-router
  namespace: llama-stack
spec:
  podSelector:
    matchLabels:
      app: llama-stack
      app.kubernetes.io/instance: llamastack-with-config
  ingress:
    - ports:
        - protocol: TCP
          port: 8321
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress
  policyTypes:
    - Ingress
